--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.0-alpha3",
+    "chai": "^4.3.7",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongoose": "^6.10.4",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nyc": "^15.1.0"
   }
 }
